natu-bonsly/natu-bonsly-asyncjava/src/main/java/com/theoxao/bonsly/aj/antlr/JavaParser.java
package com.theoxao.bonsly.aj.antlr;
// Generated from JavaParser.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavaParser extends Parser {
	public static final int
            ABSTRACT = 1, ASSERT = 2, BOOLEAN = 3, BREAK = 4, BYTE = 5, CASE = 6, CATCH = 7, CHAR = 8,
            CLASS = 9, CONST = 10, CONTINUE = 11, DEFAULT = 12, DO = 13, DOUBLE = 14, ELSE = 15,
            ENUM = 16, EXTENDS = 17, FINAL = 18, FINALLY = 19, FLOAT = 20, FOR = 21, IF = 22, GOTO = 23,
            IMPLEMENTS = 24, IMPORT = 25, INSTANCEOF = 26, INT = 27, INTERFACE = 28, LONG = 29,
            NATIVE = 30, NEW = 31, PACKAGE = 32, PRIVATE = 33, PROTECTED = 34, PUBLIC = 35, RETURN = 36,
            SHORT = 37, STATIC = 38, STRICTFP = 39, SUPER = 40, SWITCH = 41, SYNCHRONIZED = 42,
            THIS = 43, THROW = 44, THROWS = 45, TRANSIENT = 46, TRY = 47, VOID = 48, VOLATILE = 49,
            WHILE = 50, ASYNC = 51, AWAIT = 52, DECIMAL_LITERAL = 53, HEX_LITERAL = 54, OCT_LITERAL = 55,
            BINARY_LITERAL = 56, FLOAT_LITERAL = 57, HEX_FLOAT_LITERAL = 58, BOOL_LITERAL = 59,
            CHAR_LITERAL = 60, STRING_LITERAL = 61, NULL_LITERAL = 62, LPAREN = 63, RPAREN = 64,
            LBRACE = 65, RBRACE = 66, LBRACK = 67, RBRACK = 68, SEMI = 69, COMMA = 70, DOT = 71,
            ASSIGN = 72, GT = 73, LT = 74, BANG = 75, TILDE = 76, QUESTION = 77, COLON = 78, EQUAL = 79,
            LE = 80, GE = 81, NOTEQUAL = 82, AND = 83, OR = 84, INC = 85, DEC = 86, ADD = 87, SUB = 88,
            MUL = 89, DIV = 90, BITAND = 91, BITOR = 92, CARET = 93, MOD = 94, ADD_ASSIGN = 95,
            SUB_ASSIGN = 96, MUL_ASSIGN = 97, DIV_ASSIGN = 98, AND_ASSIGN = 99, OR_ASSIGN = 100,
            XOR_ASSIGN = 101, MOD_ASSIGN = 102, LSHIFT_ASSIGN = 103, RSHIFT_ASSIGN = 104,
            URSHIFT_ASSIGN = 105, ARROW = 106, COLONCOLON = 107, AT = 108, ELLIPSIS = 109, WS = 110,
            COMMENT = 111, LINE_COMMENT = 112, IDENTIFIER = 113;
	public static final int
            RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2,
            RULE_typeDeclaration = 3, RULE_modifier = 4, RULE_classOrInterfaceModifier = 5,
            RULE_variableModifier = 6, RULE_classDeclaration = 7, RULE_typeParameters = 8,
            RULE_typeParameter = 9, RULE_typeBound = 10, RULE_enumDeclaration = 11,
            RULE_enumConstants = 12, RULE_enumConstant = 13, RULE_enumBodyDeclarations = 14,
            RULE_interfaceDeclaration = 15, RULE_classBody = 16, RULE_interfaceBody = 17,
            RULE_classBodyDeclaration = 18, RULE_memberDeclaration = 19, RULE_methodDeclaration = 20,
            RULE_methodBody = 21, RULE_typeTypeOrVoid = 22, RULE_genericMethodDeclaration = 23,
            RULE_genericConstructorDeclaration = 24, RULE_constructorDeclaration = 25,
            RULE_fieldDeclaration = 26, RULE_interfaceBodyDeclaration = 27, RULE_interfaceMemberDeclaration = 28,
            RULE_constDeclaration = 29, RULE_constantDeclarator = 30, RULE_interfaceMethodDeclaration = 31,
            RULE_interfaceMethodModifier = 32, RULE_genericInterfaceMethodDeclaration = 33,
            RULE_variableDeclarators = 34, RULE_variableDeclarator = 35, RULE_variableDeclaratorId = 36,
            RULE_variableInitializer = 37, RULE_arrayInitializer = 38, RULE_classOrInterfaceType = 39,
            RULE_typeArgument = 40, RULE_qualifiedNameList = 41, RULE_formalParameters = 42,
            RULE_formalParameterList = 43, RULE_formalParameter = 44, RULE_lastFormalParameter = 45,
            RULE_qualifiedName = 46, RULE_literal = 47, RULE_integerLiteral = 48,
            RULE_floatLiteral = 49, RULE_annotation = 50, RULE_elementValuePairs = 51,
            RULE_elementValuePair = 52, RULE_elementValue = 53, RULE_elementValueArrayInitializer = 54,
            RULE_annotationTypeDeclaration = 55, RULE_annotationTypeBody = 56, RULE_annotationTypeElementDeclaration = 57,
            RULE_annotationTypeElementRest = 58, RULE_annotationMethodOrConstantRest = 59,
            RULE_annotationMethodRest = 60, RULE_annotationConstantRest = 61, RULE_defaultValue = 62,
            RULE_block = 63, RULE_blockStatement = 64, RULE_localVariableDeclaration = 65,
            RULE_localTypeDeclaration = 66, RULE_statement = 67, RULE_catchClause = 68,
            RULE_catchType = 69, RULE_finallyBlock = 70, RULE_resourceSpecification = 71,
            RULE_resources = 72, RULE_resource = 73, RULE_switchBlockStatementGroup = 74,
            RULE_switchLabel = 75, RULE_forControl = 76, RULE_forInit = 77, RULE_enhancedForControl = 78,
            RULE_parExpression = 79, RULE_expressionList = 80, RULE_methodCall = 81,
            RULE_expression = 82, RULE_awaitExpression = 83, RULE_lambdaExpression = 84,
            RULE_lambdaParameters = 85, RULE_lambdaBody = 86, RULE_primary = 87, RULE_classType = 88,
            RULE_creator = 89, RULE_createdName = 90, RULE_innerCreator = 91, RULE_arrayCreatorRest = 92,
            RULE_classCreatorRest = 93, RULE_explicitGenericInvocation = 94, RULE_typeArgumentsOrDiamond = 95,
            RULE_nonWildcardTypeArgumentsOrDiamond = 96, RULE_nonWildcardTypeArguments = 97,
            RULE_typeList = 98, RULE_typeType = 99, RULE_primitiveType = 100, RULE_typeArguments = 101,
            RULE_superSuffix = 102, RULE_explicitGenericInvocationSuffix = 103, RULE_arguments = 104;
	public static final String[] ruleNames = {
            "compilationUnit", "packageDeclaration", "importDeclaration", "typeDeclaration",
            "modifier", "classOrInterfaceModifier", "variableModifier", "classDeclaration",
            "typeParameters", "typeParameter", "typeBound", "enumDeclaration", "enumConstants",
            "enumConstant", "enumBodyDeclarations", "interfaceDeclaration", "classBody",
            "interfaceBody", "classBodyDeclaration", "memberDeclaration", "methodDeclaration",
            "methodBody", "typeTypeOrVoid", "genericMethodDeclaration", "genericConstructorDeclaration",
            "constructorDeclaration", "fieldDeclaration", "interfaceBodyDeclaration",
            "interfaceMemberDeclaration", "constDeclaration", "constantDeclarator",
            "interfaceMethodDeclaration", "interfaceMethodModifier", "genericInterfaceMethodDeclaration",
            "variableDeclarators", "variableDeclarator", "variableDeclaratorId", "variableInitializer",
            "arrayInitializer", "classOrInterfaceType", "typeArgument", "qualifiedNameList",
            "formalParameters", "formalParameterList", "formalParameter", "lastFormalParameter",
            "qualifiedName", "literal", "integerLiteral", "floatLiteral", "annotation",
            "elementValuePairs", "elementValuePair", "elementValue", "elementValueArrayInitializer",
            "annotationTypeDeclaration", "annotationTypeBody", "annotationTypeElementDeclaration",
            "annotationTypeElementRest", "annotationMethodOrConstantRest", "annotationMethodRest",
            "annotationConstantRest", "defaultValue", "block", "blockStatement", "localVariableDeclaration",
            "localTypeDeclaration", "statement", "catchClause", "catchType", "finallyBlock",
            "resourceSpecification", "resources", "resource", "switchBlockStatementGroup",
            "switchLabel", "forControl", "forInit", "enhancedForControl", "parExpression",
            "expressionList", "methodCall", "expression", "awaitExpression", "lambdaExpression",
            "lambdaParameters", "lambdaBody", "primary", "classType", "creator", "createdName",
            "innerCreator", "arrayCreatorRest", "classCreatorRest", "explicitGenericInvocation",
            "typeArgumentsOrDiamond", "nonWildcardTypeArgumentsOrDiamond", "nonWildcardTypeArguments",
            "typeList", "typeType", "primitiveType", "typeArguments", "superSuffix",
            "explicitGenericInvocationSuffix", "arguments"
	};
	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();

	private static final String[] _LITERAL_NAMES = {
            null, "'abstract'", "'assert'", "'boolean'", "'break'", "'byte'", "'case'",
            "'catch'", "'char'", "'class'", "'const'", "'continue'", "'default'",
            "'do'", "'double'", "'else'", "'enum'", "'extends'", "'final'", "'finally'",
            "'float'", "'for'", "'if'", "'goto'", "'implements'", "'import'", "'instanceof'",
            "'int'", "'interface'", "'long'", "'native'", "'new'", "'package'", "'private'",
            "'protected'", "'public'", "'return'", "'short'", "'static'", "'strictfp'",
            "'super'", "'switch'", "'synchronized'", "'this'", "'throw'", "'throws'",
            "'transient'", "'try'", "'void'", "'volatile'", "'while'", "'async'",
            "'await'", null, null, null, null, null, null, null, null, null, "'null'",
            "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", "'='",
            "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", "'!='",
            "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'",
            "'^'", "'%'", "'+='", "'-='", "'*='", "'/='", "'&='", "'|='", "'^='",
            "'%='", "'<<='", "'>>='", "'>>>='", "'->'", "'::'", "'@'", "'...'"
    };

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }
	private static final String[] _SYMBOLIC_NAMES = {
            null, "ABSTRACT", "ASSERT", "BOOLEAN", "BREAK", "BYTE", "CASE", "CATCH",
            "CHAR", "CLASS", "CONST", "CONTINUE", "DEFAULT", "DO", "DOUBLE", "ELSE",
            "ENUM", "EXTENDS", "FINAL", "FINALLY", "FLOAT", "FOR", "IF", "GOTO", "IMPLEMENTS",
            "IMPORT", "INSTANCEOF", "INT", "INTERFACE", "LONG", "NATIVE", "NEW", "PACKAGE",
            "PRIVATE", "PROTECTED", "PUBLIC", "RETURN", "SHORT", "STATIC", "STRICTFP",
            "SUPER", "SWITCH", "SYNCHRONIZED", "THIS", "THROW", "THROWS", "TRANSIENT",
            "TRY", "VOID", "VOLATILE", "WHILE", "ASYNC", "AWAIT", "DECIMAL_LITERAL",
            "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", "HEX_FLOAT_LITERAL",
            "BOOL_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", "NULL_LITERAL", "LPAREN",
            "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT",
            "ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", "COLON", "EQUAL", "LE",
            "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", "ADD", "SUB", "MUL", "DIV",
            "BITAND", "BITOR", "CARET", "MOD", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN",
            "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN",
            "RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "ARROW", "COLONCOLON", "AT", "ELLIPSIS",
            "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER"
	};

	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

    static {
        RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION);
    }

	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}

	public JavaParser(TokenStream input) {
		super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	@Override
    public String getGrammarFileName() {
        return "JavaParser.g4";
    }

	@Override
    public String[] getRuleNames() {
        return ruleNames;
    }

	@Override
    public String getSerializedATN() {
        return _serializedATN;
    }

	@Override
    public ATN getATN() {
        return _ATN;
    }

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(211);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                    case 1: {
                        setState(210);
                        packageDeclaration();
                    }
                    break;
                }
                setState(216);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == IMPORT) {
                    {
                        {
                            setState(213);
                            importDeclaration();
                        }
                    }
                    setState(218);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(222);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ABSTRACT) | (1L << BOOLEAN) | (1L << BYTE) | (1L << CHAR) | (1L << CLASS) | (1L << DOUBLE) | (1L << ENUM) | (1L << FINAL) | (1L << FLOAT) | (1L << INT) | (1L << INTERFACE) | (1L << LONG) | (1L << PRIVATE) | (1L << PROTECTED) | (1L << PUBLIC) | (1L << SHORT) | (1L << STATIC) | (1L << STRICTFP) | (1L << VOID))) != 0) || ((((_la - 69)) & ~0x3f) == 0 && ((1L << (_la - 69)) & ((1L << (SEMI - 69)) | (1L << (AT - 69)) | (1L << (IDENTIFIER - 69)))) != 0)) {
                    {
                        {
                            setState(219);
                            typeDeclaration();
                        }
                    }
                    setState(224);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(225);
                match(EOF);
			}
        } catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
        } finally {
			exitRule();
		}
		return _localctx;
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(230);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == AT) {
                    {
                        {
                            setState(227);
                            annotation();
                        }
                    }
                    setState(232);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(233);
                match(PACKAGE);
                setState(234);
                qualifiedName();
                setState(235);
                match(SEMI);
			}
        } catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
        } finally {
			exitRule();
		}
		return _localctx;
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
                setState(237);
                match(IMPORT);
                setState(239);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == STATIC) {
                    {
                        setState(238);
                        match(STATIC);
                    }
                }

                setState(241);
                qualifiedName();
                setState(244);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == DOT) {
                    {
                        setState(242);
                        match(DOT);
                        setState(243);
                        match(MUL);
                    }
                }

                setState(246);
                match(SEMI);
			}
        } catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
        } finally {
			exitRule();
		}
		return _localctx;
	}
